export class WeatherDto {
  lat: number;
  long: number;
}
