@startuml
left to right direction

class TelemetryRecord {
    String id
    Localtime timestamp
    Double latitude
    Double longitude
    Double altitude 
    Integer speed 
    Integer fuel 
    Integer temperature
    Integer pressure
    Integer humidity
}

enum RocketStatus {
    READY
    NOT_READY
    LAUNCHED
    STAGED
}

class Rocket {
    String id
    String name
    Integer stageOneFuel
    Integer stageTwoFuel
}

class Payload {
    String id 
    String content
} 

class Mission {
    String id 
    String name 
    String destinationOrbit
}

enum MissionStatus {
    SUCCESFUL
    FAILED
    IN_PROGRESS
}

class Site {
    String id
    String name
    Double latitude
    Double longitude
    Double altitude
}
Enum WeatherStatus {
    SUNNY
    CLOUDY
    RAINY
    STORMY
}

class Weather {
    String id
}

Weather ..|> WeatherStatus : use

class Client {
    String id 
    String name 
}

Rocket ..> RocketStatus : use
Weather "1"--"1" Site : concerns
Rocket "1"--"1" Payload : contains
Payload "n"--"1" Client : concerns
Mission "1"--"n" Site : launch
Mission "1"--"1" Rocket : concerns
Mission ..> MissionStatus : use


TelemetryRecord "n"--"1" Mission

@enduml